# codegen/lib/apiclient/Models/UserCustomAction.cs
@@ -1,0 +1,209 @@
+// <auto-generated/>
+using Microsoft.Kiota.Abstractions.Serialization;
+using System.Collections.Generic;
+using System.IO;
+using System.Linq;
+using System;
+namespace Graph.Community.Models {
+    public class UserCustomAction : IAdditionalDataHolder, IParsable 
+    {
+        /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
+        public IDictionary<string, object> AdditionalData { get; set; }
+        /// <summary>The ClientSideComponentId property</summary>
+        public Guid? ClientSideComponentId { get; set; }
+        /// <summary>The ClientSideComponentProperties property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ClientSideComponentProperties { get; set; }
+#nullable restore
+#else
+        public string ClientSideComponentProperties { get; set; }
+#endif
+        /// <summary>The CommandUIExtension property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? CommandUIExtension { get; set; }
+#nullable restore
+#else
+        public string CommandUIExtension { get; set; }
+#endif
+        /// <summary>The Description property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Description { get; set; }
+#nullable restore
+#else
+        public string Description { get; set; }
+#endif
+        /// <summary>The Group property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Group { get; set; }
+#nullable restore
+#else
+        public string Group { get; set; }
+#endif
+        /// <summary>The HostProperties property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? HostProperties { get; set; }
+#nullable restore
+#else
+        public string HostProperties { get; set; }
+#endif
+        /// <summary>The Id property</summary>
+        public Guid? Id { get; set; }
+        /// <summary>The ImageUrl property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ImageUrl { get; set; }
+#nullable restore
+#else
+        public string ImageUrl { get; set; }
+#endif
+        /// <summary>The Location property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Location { get; set; }
+#nullable restore
+#else
+        public string Location { get; set; }
+#endif
+        /// <summary>The Name property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Name { get; set; }
+#nullable restore
+#else
+        public string Name { get; set; }
+#endif
+        /// <summary>The RegistrationId property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? RegistrationId { get; set; }
+#nullable restore
+#else
+        public string RegistrationId { get; set; }
+#endif
+        /// <summary>The RegistrationType property</summary>
+        public int? RegistrationType { get; set; }
+        /// <summary>The Scope property</summary>
+        public int? Scope { get; set; }
+        /// <summary>The ScriptBlock property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ScriptBlock { get; set; }
+#nullable restore
+#else
+        public string ScriptBlock { get; set; }
+#endif
+        /// <summary>The ScriptSrc property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ScriptSrc { get; set; }
+#nullable restore
+#else
+        public string ScriptSrc { get; set; }
+#endif
+        /// <summary>The Sequence property</summary>
+        public int? Sequence { get; set; }
+        /// <summary>The Title property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Title { get; set; }
+#nullable restore
+#else
+        public string Title { get; set; }
+#endif
+        /// <summary>The Url property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Url { get; set; }
+#nullable restore
+#else
+        public string Url { get; set; }
+#endif
+        /// <summary>The VersionOfUserCustomAction property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? VersionOfUserCustomAction { get; set; }
+#nullable restore
+#else
+        public string VersionOfUserCustomAction { get; set; }
+#endif
+        /// <summary>
+        /// Instantiates a new <see cref="UserCustomAction"/> and sets the default values.
+        /// </summary>
+        public UserCustomAction()
+        {
+            AdditionalData = new Dictionary<string, object>();
+        }
+        /// <summary>
+        /// Creates a new instance of the appropriate class based on discriminator value
+        /// </summary>
+        /// <returns>A <see cref="UserCustomAction"/></returns>
+        /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
+        public static UserCustomAction CreateFromDiscriminatorValue(IParseNode parseNode)
+        {
+            _ = parseNode ?? throw new ArgumentNullException(nameof(parseNode));
+            return new UserCustomAction();
+        }
+        /// <summary>
+        /// The deserialization information for the current model
+        /// </summary>
+        /// <returns>A IDictionary&lt;string, Action&lt;IParseNode&gt;&gt;</returns>
+        public virtual IDictionary<string, Action<IParseNode>> GetFieldDeserializers()
+        {
+            return new Dictionary<string, Action<IParseNode>>
+            {
+                {"ClientSideComponentId", n => { ClientSideComponentId = n.GetGuidValue(); } },
+                {"ClientSideComponentProperties", n => { ClientSideComponentProperties = n.GetStringValue(); } },
+                {"CommandUIExtension", n => { CommandUIExtension = n.GetStringValue(); } },
+                {"Description", n => { Description = n.GetStringValue(); } },
+                {"Group", n => { Group = n.GetStringValue(); } },
+                {"HostProperties", n => { HostProperties = n.GetStringValue(); } },
+                {"Id", n => { Id = n.GetGuidValue(); } },
+                {"ImageUrl", n => { ImageUrl = n.GetStringValue(); } },
+                {"Location", n => { Location = n.GetStringValue(); } },
+                {"Name", n => { Name = n.GetStringValue(); } },
+                {"RegistrationId", n => { RegistrationId = n.GetStringValue(); } },
+                {"RegistrationType", n => { RegistrationType = n.GetIntValue(); } },
+                {"Scope", n => { Scope = n.GetIntValue(); } },
+                {"ScriptBlock", n => { ScriptBlock = n.GetStringValue(); } },
+                {"ScriptSrc", n => { ScriptSrc = n.GetStringValue(); } },
+                {"Sequence", n => { Sequence = n.GetIntValue(); } },
+                {"Title", n => { Title = n.GetStringValue(); } },
+                {"Url", n => { Url = n.GetStringValue(); } },
+                {"VersionOfUserCustomAction", n => { VersionOfUserCustomAction = n.GetStringValue(); } },
+            };
+        }
+        /// <summary>
+        /// Serializes information the current object
+        /// </summary>
+        /// <param name="writer">Serialization writer to use to serialize this model</param>
+        public virtual void Serialize(ISerializationWriter writer)
+        {
+            _ = writer ?? throw new ArgumentNullException(nameof(writer));
+            writer.WriteGuidValue("ClientSideComponentId", ClientSideComponentId);
+            writer.WriteStringValue("ClientSideComponentProperties", ClientSideComponentProperties);
+            writer.WriteStringValue("CommandUIExtension", CommandUIExtension);
+            writer.WriteStringValue("Description", Description);
+            writer.WriteStringValue("Group", Group);
+            writer.WriteStringValue("HostProperties", HostProperties);
+            writer.WriteGuidValue("Id", Id);
+            writer.WriteStringValue("ImageUrl", ImageUrl);
+            writer.WriteStringValue("Location", Location);
+            writer.WriteStringValue("Name", Name);
+            writer.WriteStringValue("RegistrationId", RegistrationId);
+            writer.WriteIntValue("RegistrationType", RegistrationType);
+            writer.WriteIntValue("Scope", Scope);
+            writer.WriteStringValue("ScriptBlock", ScriptBlock);
+            writer.WriteStringValue("ScriptSrc", ScriptSrc);
+            writer.WriteIntValue("Sequence", Sequence);
+            writer.WriteStringValue("Title", Title);
+            writer.WriteStringValue("Url", Url);
+            writer.WriteStringValue("VersionOfUserCustomAction", VersionOfUserCustomAction);
+            writer.WriteAdditionalData(AdditionalData);
+        }
+    }
+}
